# time-range-ext

./: .editorconfig  Cargo.toml  README.md
src/: lib.rs  time_range.rs  working_hours.rs
src/time_range/: time_range_ext.rs  vec_range.rs
