[package]
name = "time-range-ext"
version = "0.1.0"
edition = "2021"
resolver = "2"
license = "GPL-3"
description = "An extension library for the time crate to cover reoccurring use cases, everything time related."
homepage = "https://github.com/pascalporedda/time-rs-ext"
authors = ["Pascal Poredda <pascal@poredda.digital>"]
keywords = ["time", "extensions", "range", "working-hours"]
categories = ["date-and-time"]

[dependencies]
time = {  version = "0.3.36", features = ["serde", "macros"] }
serde = {  version = "1.0.204", features = ["derive", "default"], optional = true }
serde_json = { version = "1.0.120", optional = true }

[features]
serde = ["dep:serde", "dep:serde_json"]
